# renderer4

./: CMakeLists.txt  README.md
include/: Shader.h  shaders.h
include/glad/: glad.h
media/: grid.frag  passthrough.vert  red.frag  textured.frag
src/: CMakeLists.txt  Camera.cpp  Camera.h  Shader.cpp  Shader.h  Texture.h  glad.c  main.cpp
